<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="4"
    android:layout_column="2"
    android:layout_weight="1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"

        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill"


        android:text="@string/look"

        android:textSize="30sp" />


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill"

        android:text="@string/ClickHere" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"

        android:layout_column="1"
        android:layout_gravity="fill"
        android:text="@string/checkbox" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:contentDescription="@string/flags"
        app:srcCompat="@drawable/flag"

        />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"

        android:layout_column="1"
        android:layout_gravity="fill"
        android:text="@string/Switch" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_columnSpan="2"



        android:hint="@string/edittext"
        android:inputType="textPersonName|textCapWords" />


</GridLayout>